syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.DS.xinqipeiproject.SmartOfficeGRPC";
option java_outer_classname = "RadiatorsServiceImpl";

package SmartOfficeGRPC;

service RadiatorsService {
  rpc initialItem(Empty) returns (radiatorsResponse) {}
  
  rpc changeTemperature(valueRequest) returns (stream valueResponse) {}
  
  rpc changeFan(valueRequest) returns (stream valueResponse) {}
  
  rpc onOff(booleanRequest) returns (booleanResponse) {}
  
  rpc changeItemName(stringRequest) returns (stringResponse) {}	

}

message Empty {

}

message stringRequest {
	string text = 1;
}

message stringResponse {
	string text = 1;
}

message booleanRequest {
	bool msg = 2;
}

message booleanResponse {
	bool msg = 2;
}

message valueRequest {
  int32 length = 3;
}

message valueResponse {
  int32 length = 3;
}

message radiatorsResponse {
	string aname = 4;
	string status = 5;
	int32 temperature = 6;
	int32 fan = 7;
}
